--- a/frontend/src/pages/ContactUs.css
+++ b/frontend/src/pages/ContactUs.css
@@ -11,5 +11,12 @@
 .form-check-label{
     margin-left: 6rem;
 }
-
-    
+#exampleCheck1{
+    margin-left: 1rem;
+    }
+    .btn{
+    margin-left: 39.5rem;
+    margin-top: 2rem;
+    background-color: red;
+    border-radius: 4rem;
+    }
