--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -1,3 +1,8 @@
 .buton {
-   
+    margin-left: 6.8rem;
+    margin-top: 1rem;
+    background-color: red;
+    width: 6rem;
+    color: white;
+    border-radius: 3rem;
 } 
