added med-social css fixed

--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -1,3 +1,10 @@
 .footer-container{
     margin-left: 10rem;
 }
+.med-social{
+    margin-left: 5rem;
+    font-weight: bold;
+    color: rgb(230, 5, 5);
+    font-size: 20px;
+}
+
