--- a/frontend/src/components/CardBar.css
+++ b/frontend/src/components/CardBar.css
@@ -1,25 +1,22 @@
 .card-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
-  grid-gap: 20px;
+  grid-gap: 27rem;
+  margin-left: 2.4rem;
+  
 }
 .card-container > div {
-  text-align: center;
-  padding: 8px;
-  margin-left: -2rem;
-  width: 33.4rem;
-  font-size: 30px;
-  color: rgb(234, 10, 10);
+  position: relative;
+  width: 15px;
   font-weight: bolder;
+}
+
+.red-box{
+  position: absolute;
+  margin-left: 3.4rem;
+  color: rgb(234, 10, 10);
 }
 
 h1{
   font-size: 20px;
  }
- .top{
-  margin-top: 3rem;
- }
- .cardz{
-  width: 3rem;
-  height: 25rem;
-}
