--- a/frontend/src/components/Sell.css
+++ b/frontend/src/components/Sell.css
@@ -1,50 +1,61 @@
-#cardq{
-width: 23rem;
-height: 20rem;
-margin-left: 5px;
+.card{
+  margin-top: 7rem;
+width: 17rem;
+margin-left: 5.3rem;
 }
 img:hover{
   box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
 }
 
 .card-title{
+  position: relative;
 margin-top: -6rem;
+margin-left: -1rem;
 }
+
 .card-text{
-  margin-top: -4rem;
+  position: absolute;
+  margin-top: -3.6rem;
   color: red;
-  margin-right: 15rem;
+  margin-left: 0rem;
   font-weight: bold;
   font-size: 18px;
+  padding-left: 1rem;
 }
 
 .grid-container {
   display: grid;
   grid-template-columns: auto auto auto auto;
-  gap: 14px;
+  gap: 3px;
   width: 7px;
 }
 
 .grid-container > div {
   text-align: center;
-  font-size: 1px;
-  
+  font-size: 2px;
 }
 .card-img{
-  width: 30rem;
+  width: 24rem;
+  margin-left: 3rem;
+  height: 15rem;
 }
-.item{
-  width: 23rem;
-}
+
 .btn-primary{
   position: absolute;
+  margin-top: 3rem;
+  height: 3rem;
   width: 8rem;
   color: rgb(248, 241, 241);
   text-transform: uppercase;
   box-shadow: 0 4px 9px -4px rgba(0,0,0,.35);
+  background-color: red;
 }
 a.btn.btn-primary {
-  margin-left: -3rem;
+  margin-left: -3.8rem;
   border-radius: 0%;
-  margin-top: 2rem;
+  margin-top: .5rem;
+}
+
+.btn-primary:hover{
+background-color: blue;
 }
