--- a/frontend/src/components/View.css
+++ b/frontend/src/components/View.css
@@ -1,17 +1,15 @@
 .windon-container1{
     position: absolute;
-    display: grid;
     display: flex;
     grid-template-columns: auto auto auto auto;
-    margin-top: 5rem;
-    gap: 13px;
-    margin-left: -2rem;
-    background-color: rgb(245, 5, 5);
+    margin-top: 7rem;
+    margin-left: 4rem;
 }
 .windons{
-  width: 23.4rem;
+  width: 20.2rem;
   margin-top: -1rem;
- 
+  margin-left: 1.3rem;
+  height: 15rem;
 }
 
 .tit{
@@ -22,7 +20,7 @@
 .tex{
   margin-left: 50px;
   color: red;
-  margin-top: -4rem;
+  margin-top: -3.1rem;
   font-size: 18px;
   font-weight: bold;
 }
@@ -43,9 +41,9 @@
 
 .view1{
   position: absolute;
-  left: 46rem;
+  left: 40rem;
   width: 9rem;
-  margin-top: -2rem;
+  margin-top: -6rem;
   font-weight: bold;
   border-radius: 4rem;
 }
