--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -1,3 +1,12 @@
+.carde{
+    width: 25rem;
+    margin-left: 33rem;
+background-color: rgb(222, 222, 222);
+}
+.carde-body{ 
+    margin-left: -2.5rem;
+}
+
 .buton {
     margin-left: 6.8rem;
     margin-top: 1rem;
@@ -7,17 +16,19 @@
     border-radius: 3rem;
 }
 label{
-    margin-left: 6px;
+    margin-left: 8px;
 }
-.card-body{
-    width: 34rem;
-   margin-left: 30.9rem;
-   background-color: rgb(234, 233, 233);
-}
-.text-uppercase{
+.textz-uppercase{
     background-color: red;
     width: 25rem;
-    padding-left: 2rem;
-    margin-left: 3.3rem;
+    padding-left: 5rem;
+    margin-left: 2.5rem;
     color: white;
+}
+.texts-center{
+    margin-left: 1rem;
+}
+.log{
+    margin-top: -1.6rem;
+    margin-left: 12rem;
 }
