--- a/frontend/src/components/CardBar.css
+++ b/frontend/src/components/CardBar.css
@@ -10,3 +10,9 @@
   width: 15px;
   font-weight: bolder;
 }
+.red-box{
+  position: absolute;
+  margin-left: 3.4rem;
+  color: rgb(234, 10, 10);
+}
+
