--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -36,3 +36,12 @@ h6{
     background-color: red;
     text-align: center;
 }
+.academy{
+    font-size: 1rem;
+    background-color: red;
+    margin-left: -11px;
+    color: white;
+    cursor: pointer;
+    box-shadow: rgba(0, 0, 0, 1.24) 0px 3px 2px;
+}
+
