--- a/frontend/src/components/Ray.css
+++ b/frontend/src/components/Ray.css
@@ -2,3 +2,16 @@ img{
   width: 100%;
   height: 20rem;
 }
+.txt{
+  position: absolute;
+  color: white;
+  margin-top: 29.4rem;
+  background-color: red;
+  height: 2rem;
+  width: 25rem;
+  padding-left: 1.2rem;
+  padding-top: 8px;
+  margin-left: 35.9rem;
+  font-weight: bolder;
+  box-shadow: rgba(0, 0, 3, 3.75) 0px 5px 15px;
+}
