--- a/frontend/src/components/Ray.css
+++ b/frontend/src/components/Ray.css
@@ -15,3 +15,15 @@ img{
   font-weight: bolder;
   box-shadow: rgba(0, 0, 3, 3.75) 0px 5px 15px;
 }
+.wordsecond {
+  position: absolute;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  bottom: -72rem;
+  font-weight: bold;
+  left: 13.5rem;
+  transform: translate(-50%, -50%);
+  color: rgb(252, 248, 248);
+  margin-bottom: -18rem;
+}
