--- a/frontend/src/components/Ray.css
+++ b/frontend/src/components/Ray.css
@@ -27,3 +27,14 @@ img{
   color: rgb(252, 248, 248);
   margin-bottom: -18rem;
 }
+
+.wordfirst{
+  position: absolute;
+  font-family: 'Caveat', cursive;
+  font-size: 30px;
+  bottom: -75rem;
+  left: 25rem;
+  transform: translate(-50%, -50%);
+  color: rgb(247, 245, 245);
+  margin-bottom: -18rem;
+}
