--- a/frontend/src/components/Ray.css
+++ b/frontend/src/components/Ray.css
@@ -1,8 +1,9 @@
-img{
+img {
   width: 100%;
   height: 20rem;
 }
-.txt{
+
+.txt {
   position: absolute;
   color: white;
   margin-top: 29.4rem;
@@ -15,6 +16,7 @@ img{
   font-weight: bolder;
   box-shadow: rgba(0, 0, 3, 3.75) 0px 5px 15px;
 }
+
 .wordsecond {
   position: absolute;
   align-items: center;
@@ -28,7 +30,7 @@ img{
   margin-bottom: -18rem;
 }
 
-.wordfirst{
+.wordfirst {
   position: absolute;
   font-family: 'Caveat', cursive;
   font-size: 30px;
@@ -39,28 +41,34 @@ img{
   margin-bottom: -18rem;
 }
 
-.imge{
+.imge {
   height: 34rem;
   margin-top: 30rem;
 }
-.videos{
+
+.videos {
   position: relative;
   left: 9px;
   width: 99%;
   margin-top: 0.2rem;
   font-weight: bold;
   border-radius: 3rem;
-  }
-   
-  .video1{
-    position: absolute;
-    font-size: 15px;
-    height: 1.8rem;
-    width: 15rem;
-    bottom: -96rem;
-    font-weight: bold;
-    border-radius: 3rem;
-    margin-left: 5rem;
-    
-    }
-   
+}
+
+.video1 {
+  position: absolute;
+  font-size: 15px;
+  height: 1.8rem;
+  width: 15rem;
+  bottom: -96rem;
+  font-weight: bold;
+  border-radius: 3rem;
+  margin-left: 5rem;
+
+}
+
+.video1:hover {
+  background-color: darkgrey;
+  color: red;
+  opacity: 88%;
+}
