--- a/frontend/src/components/Sell.css
+++ b/frontend/src/components/Sell.css
@@ -3,3 +3,6 @@
 width: 17rem;
 margin-left: 5.3rem;
 }
+img:hover{
+  box-shadow: rgba(9, 30, 66, 0.25) 0px 4px 8px -2px, rgba(9, 30, 66, 0.08) 0px 0px 0px 1px;
+}
