--- a/frontend/src/components/Sell.css
+++ b/frontend/src/components/Sell.css
@@ -31,3 +31,9 @@ margin-left: -1rem;
   text-align: center;
   font-size: 2px;
 }
+
+.card-img{
+  width: 24rem;
+  margin-left: 3rem;
+  height: 15rem;
+}
