--- a/frontend/src/components/Sell.css
+++ b/frontend/src/components/Sell.css
@@ -37,3 +37,13 @@ margin-left: -1rem;
   margin-left: 3rem;
   height: 15rem;
 }
+.btn-primary{
+  position: absolute;
+  margin-top: 3rem;
+  height: 3rem;
+  width: 8rem;
+  color: rgb(248, 241, 241);
+  text-transform: uppercase;
+  box-shadow: 0 4px 9px -4px rgba(0,0,0,.35);
+  background-color: red;
+}
