--- a/frontend/src/components/Sell.css
+++ b/frontend/src/components/Sell.css
@@ -47,3 +47,8 @@ margin-left: -1rem;
   box-shadow: 0 4px 9px -4px rgba(0,0,0,.35);
   background-color: red;
 }
+a.btn.btn-primary {
+  margin-left: -3.8rem;
+  border-radius: 0%;
+  margin-top: .5rem;
+}
