added windons fixed

--- a/frontend/src/components/View.css
+++ b/frontend/src/components/View.css
@@ -5,3 +5,9 @@
   margin-top: 7rem;
   margin-left: 4rem;
 }
+.windons{
+  width: 20.2rem;
+  margin-top: -1rem;
+  margin-left: 1.3rem;
+  height: 15rem;
+  }
