--- a/frontend/src/components/View.css
+++ b/frontend/src/components/View.css
@@ -16,4 +16,11 @@
     margin-top: -4.1rem;  
     }
 
-    
+    .tex{
+      margin-left: 50px;
+      color: red;
+      margin-top: -3.1rem;
+      font-size: 18px;
+      font-weight: bold;
+      }
+      
