added view1:hover fixed

--- a/frontend/src/components/View.css
+++ b/frontend/src/components/View.css
@@ -47,4 +47,8 @@
           border-radius: 4rem;
           }
           
-        
+          .view1:hover{
+            background-color: darkgrey;
+            color: red;
+            }
+            
