added blackglasses fixed

--- a/frontend/src/pages/AboutUs.css
+++ b/frontend/src/pages/AboutUs.css
@@ -19,3 +19,9 @@
     border-radius: 50%;
    
 }
+.blackglasses{
+    width: 80rem;
+    height: 63.3rem;
+    margin-top: -67.1rem;
+    margin-left: 15rem;
+}
