--- a/frontend/src/pages/AboutUs.css
+++ b/frontend/src/pages/AboutUs.css
@@ -25,3 +25,7 @@
     margin-top: -67.1rem;
     margin-left: 15rem;
 }
+.carousel-control-prev-icon, .carousel-control-next-icon
+{
+    visibility:hidden;
+}
