--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -1,2 +1,10 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css");
 
+#btn{
+    margin-left: 3rem;
+    margin-top: 2rem;
+    background-color: red;
+    width: 6rem;
+    color: white;
+   
+}
