--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -13,3 +13,18 @@
     width: 35rem;
 }
 
+.head {
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 2.65) 1px 2px 2px 1px;
+    background-color: rgb(255, 8, 8);
+    width: 4.2rem;
+    height: 5rem;
+    margin-left: 9rem;
+    margin-top: -6.8rem;
+    padding-top: 8px;
+    font-size: 2.8rem;
+    padding-left: 1.4rem;
+    border-top-left-radius: 3rem;
+    border-bottom-left-radius: 3rem;
+    text-decoration: underline;
+}
+
