added name and email fixed

--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -38,3 +38,12 @@ form {
     font-weight: bolder;
 }
 
+#name,
+#email {
+    margin-left: 15px;
+    border-radius: 15px;
+    width: 18rem;
+    color: red;
+    text-align: center;
+}
+
