--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -54,3 +54,10 @@ form {
     color: rgb(72, 70, 70);
 }
 
+.btn-1 {
+    border-radius: 2rem;
+    width: 6rem;
+    margin-top: 2rem;
+    margin-left: .8rem;
+}
+
