added btn-1 hover fixed

--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -61,6 +61,11 @@ form {
     margin-left: .8rem;
 }
 
+.btn-1:hover {
+    background-color: red;
+    color: white;
+}
+
 .account {
     margin-top: 1rem;
     margin-left: 1rem;
