--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -89,3 +89,10 @@ form {
     padding-left: 1rem;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 2.65) 1px 2px 2px 1px;
 }
+.image-first{
+    position: absolute;
+    width: 25rem;
+    height: 25rem;
+    margin-top: 90rem;
+    margin-left: 6rem;
+}
