added image-second fixed

--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -96,3 +96,10 @@ form {
     margin-top: 90rem;
     margin-left: 6rem;
 }
+.image-second{
+    position: absolute;
+    width: 25rem;
+    height: 25rem;
+    margin-top: 90rem;
+    margin-left: 33rem;
+}
