added image-three fixed

--- a/frontend/src/pages/Profile.css
+++ b/frontend/src/pages/Profile.css
@@ -103,3 +103,10 @@ form {
     margin-top: 90rem;
     margin-left: 33rem;
 }
+.image-three{
+    position: absolute;
+    width: 25rem;
+    height: 25rem;
+    margin-top: 90rem;
+    margin-left: 60rem;
+}
