added loop to vidoe

--- a/frontend/src/components/Ray.css
+++ b/frontend/src/components/Ray.css
@@ -48,8 +48,8 @@ img {
 
 .videos {
   position: relative;
-  left: 9px;
-  width: 99%;
+  left: 10rem;
+  width: 75rem;
   margin-top: 0.2rem;
   font-weight: bold;
   border-radius: 3rem;
