--- a/frontend/src/components/Ray.css
+++ b/frontend/src/components/Ray.css
@@ -6,12 +6,12 @@ img {
 .txt {
   position: absolute;
   color: white;
-  margin-top: 29.4rem;
+  margin-top: 25rem;
   background-color: red;
   height: 2rem;
   width: 25rem;
   padding-left: 1.2rem;
-  padding-top: 8px;
+  padding-top: 6px;
   margin-left: 35.9rem;
   font-weight: bolder;
   box-shadow: rgba(0, 0, 3, 3.75) 0px 5px 15px;
@@ -22,23 +22,24 @@ img {
   align-items: center;
   justify-content: center;
   font-size: 24px;
-  bottom: -72rem;
+  bottom: -70.4rem;
   font-weight: bold;
-  left: 13.5rem;
+  left: 25rem;
   transform: translate(-50%, -50%);
-  color: rgb(252, 248, 248);
+  color: rgb(254, 8, 8);
   margin-bottom: -18rem;
+  box-shadow: rgba(3, 3, 3, 2.76) 1px 5px 8px, rgba(2, 2, 0, 0.23) 0px 3px 6px;
 }
 
 .wordfirst {
   position: absolute;
   font-family: 'Caveat', cursive;
   font-size: 30px;
-  bottom: -75rem;
+  bottom: -85rem;
   left: 25rem;
   transform: translate(-50%, -50%);
   color: rgb(247, 245, 245);
-  margin-bottom: -18rem;
+  width: 38rem;
 }
 
 .imge {
@@ -62,10 +63,10 @@ img {
   font-size: 15px;
   height: 1.8rem;
   width: 12rem;
-  bottom: -96rem;
+  bottom: -90rem;
   font-weight: bold;
   border-radius: 3rem;
-  margin-left: 5rem;
+  margin-left: 19rem;
 
 }
 
